# MHSaveConverterPipeline

./: .gitignore  .gitmodules  PLAN.md  README.md  SPEC.md  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.sh
mhpipeline/: __init__.py  __main__.py  cli.py  convert.py  converter_bridge.py  deps.py  extdata.py  formats.py  keys.py  paths.py  profile.py  save3ds.py  system_backup.py  ui.py
tests/: conftest.py  test_cli.py  test_convert.py  test_deps.py  test_extdata.py  test_fetch_sources.py  test_keys.py  test_paths.py  test_profile.py  test_save3ds.py  test_system_backup.py
