[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mhsaveconverter-pipeline"
version = "0.1.0"
description = "CLI wrapper to convert Monster Hunter XX/GU saves between 3DS and Switch"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "art==6.1",
    "colorama==0.4.6",
    "sshkeyboard==2.3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
mhsaveconvert = "mhpipeline.cli:main"

[tool.setuptools]
packages = ["mhpipeline"]
